--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
           fi
 
       - name: Upload build artifacts
-        if: hashFiles('dist/**') != '' || hashFiles('build/**') != ''
+        if: ${{ hashFiles('dist/**') != '' || hashFiles('build/**') != '' }}
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts-node
@@ -114,7 +114,7 @@ jobs:
   python-ci:
     name: Python CI
     runs-on: ubuntu-latest
-    if: hashFiles('**/*.py') != '' || hashFiles('requirements.txt') != ''
+    if: ${{ hashFiles('**/*.py') != '' || hashFiles('requirements.txt') != '' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -153,7 +153,7 @@ jobs:
           pytest --cov=. --cov-report=xml --cov-report=term --cov-report=json || echo "No Python tests found"
 
       - name: Upload Python coverage
-        if: hashFiles('coverage.json') != ''
+        if: ${{ hashFiles('coverage.json') != '' }}
         uses: actions/upload-artifact@v3
         with:
           name: python-coverage
@@ -166,7 +166,7 @@ jobs:
   rust-ci:
     name: Rust CI
     runs-on: ubuntu-latest
-    if: hashFiles('Cargo.toml') != ''
+    if: ${{ hashFiles('Cargo.toml') != '' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -201,7 +201,7 @@ jobs:
         run: cargo build --release
 
       - name: Upload Rust artifacts
-        if: hashFiles('target/release/**') != ''
+        if: ${{ hashFiles('target/release/**') != '' }}
         uses: actions/upload-artifact@v3
         with:
           name: rust-artifacts
@@ -217,13 +217,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node.js for npm audit
-        if: hashFiles('package-lock.json') != ''
+        if: ${{ hashFiles('package-lock.json') != '' }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Run npm audit
-        if: hashFiles('package-lock.json') != ''
+        if: ${{ hashFiles('package-lock.json') != '' }}
         run: |
           npm audit --audit-level=high --json > npm-audit.json || true
           if [ -f npm-audit.json ]; then
@@ -234,13 +234,13 @@ jobs:
           fi
 
       - name: Setup Python for pip-audit
-        if: hashFiles('requirements.txt') != ''
+        if: ${{ hashFiles('requirements.txt') != '' }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Run pip-audit
-        if: hashFiles('requirements.txt') != ''
+        if: ${{ hashFiles('requirements.txt') != '' }}
         run: |
           pip install pip-audit
           pip-audit --format json --output pip-audit.json || true
@@ -249,7 +249,7 @@ jobs:
           fi
 
       - name: Run cargo audit
-        if: hashFiles('Cargo.lock') != ''
+        if: ${{ hashFiles('Cargo.lock') != '' }}
         run: |
           cargo install cargo-audit || true
           cargo audit --json > cargo-audit.json || true
