--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
       day: "monday"
       time: "04:00"
     open-pull-requests-limit: 5
-    reviewers:
+    assignees:
       - "trinity-method/developers"
     labels:
       - "dependencies"
@@ -49,7 +49,7 @@ updates:
       day: "monday"
       time: "05:00"
     open-pull-requests-limit: 3
-    reviewers:
+    assignees:
       - "trinity-method/developers"
     labels:
       - "dependencies"
@@ -68,7 +68,7 @@ updates:
       day: "monday"
       time: "06:00"
     open-pull-requests-limit: 3
-    reviewers:
+    assignees:
       - "trinity-method/developers"
     labels:
       - "dependencies"
@@ -87,7 +87,7 @@ updates:
       day: "monday"
       time: "07:00"
     open-pull-requests-limit: 3
-    reviewers:
+    assignees:
       - "trinity-method/developers"
     labels:
       - "dependencies"
@@ -107,7 +107,7 @@ updates:
       day: "tuesday"
       time: "04:00"
     open-pull-requests-limit: 2
-    reviewers:
+    assignees:
       - "trinity-method/developers"
     labels:
       - "dependencies"
@@ -118,5 +118,3 @@ updates:
 
 # Security updates configuration
 # These are handled separately with higher priority
-security-updates:
-  open-pull-requests-limit: 10
