--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.544.0",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
