--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -244,6 +244,7 @@ jobs:
   python-ci:
     name: Python CI
     runs-on: ubuntu-latest
+    if: false  # DISABLED - No Python in this project
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
