Final Phase Completion

--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,25 @@ VITE_GITHUB_OWNER=your-org-or-username
 # Comma-separated list of repositories to monitor
 VITE_GITHUB_REPOS=repo1,repo2,repo3
 
-# How often to refresh data (milliseconds)
+# Application Settings
+VITE_APP_TITLE=DevOps Dashboard
+VITE_APP_DESCRIPTION=Real-time monitoring and analytics for your projects
+VITE_BASE_PATH=/
+
+# Thresholds
+VITE_READINESS_THRESHOLD=80
+
+# API Settings
 VITE_API_REFRESH_INTERVAL=60000
-
-# How long to cache data (milliseconds)
 VITE_CACHE_DURATION=300000
+VITE_API_PAGE_SIZE=100
+VITE_MAX_CONTRIBUTORS=5
+VITE_CHART_WEEKS=12
 
-# Enable debug logging
+# Feature Flags
 VITE_DEBUG_MODE=false
+VITE_DEMO_MODE=false
+
+# Webhook Configuration (Optional)
+VITE_WEBHOOK_URL=
+VITE_WEBHOOK_SECRET=
